--- a/overlay/app-office/openerp-server/ChangeLog
+++ b/overlay/app-office/openerp-server/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-office/openerp-server
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  19 Jun 2012; Yarik <ygorbunov@gmail.com> +openerp-server-6.0.4.ebuild:
+  version bump
 
   18 Oct 2011; Yarik <ygorbunov@gmail.com> openerp-server-6.0.3.ebuild:
   Setting permissions on addons dir.
