--- a/trunk/overlay/media-libs/libmediainfo/ChangeLog
+++ b/trunk/overlay/media-libs/libmediainfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-lib/libmediainfo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Apr 2014; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.68.ebuild:
+  Version bump.
 
   09 Oct 2011; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.50.ebuild:
   Version bump.
