--- a/trunk/overlay/media-video/mediainfo/ChangeLog
+++ b/trunk/overlay/media-video/mediainfo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-video/mediainfo
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  13 Apr 2014; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.68.ebuild:
+	Version bump.
 
   09 Oct 2011; Yarik <ygorbunov@gmail.com> +mediainfo-0.7.50.ebuild:
   Version bump.
