--- a/overlay/media-libs/libmediainfo/ChangeLog
+++ b/overlay/media-libs/libmediainfo/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  19 May 2014; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.69.ebuild:
+  Version bump.
+
   13 Apr 2014; Yarik <ygorbunov@gmail.com> +libmediainfo-0.7.68.ebuild:
   Version bump.
 
