--- a/overlay/games-strategy/freeciv/ChangeLog
+++ b/overlay/games-strategy/freeciv/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-strategy/freeciv
-# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  10 Jan 2015; Yaroslav Gorbunov <ygorbunov@gmail.com> +freeciv-2.4.4.ebuild:
+  Version bump.
 
 	26 Aug 2014; Yarik <ygorbunov@gmail.com> +freeciv-2.4.3.ebuild:
 	Version bump.
