--- a/trunk/overlay/games-arcade/supertux/ChangeLog
+++ b/trunk/overlay/games-arcade/supertux/ChangeLog
@@ -2,6 +2,9 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  11 Jan 2015; Yaroslav Gorbunov <ygorbunov@gmail.com> supertux-0.3.4.ebuild:
+  Test commit
+
 *supertux-9999 (11 Jan 2015)
 
   11 Jan 2015;  <y@gentoo.org> +supertux-9999.ebuild:
