--- a/overlay/games-strategy/freeciv/ChangeLog
+++ b/overlay/games-strategy/freeciv/ChangeLog
@@ -2,6 +2,11 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*freeciv-2.5.0_beta2 (11 Jan 2015)
+
+  11 Jan 2015; Yaroslav Gorbunov <ygorbunov@gmail.com> +freeciv-2.5.0_beta2.ebuild, metadata.xml:
+  Freeciv 2.5.0-beta2
+
   10 Jan 2015; Yaroslav Gorbunov <ygorbunov@gmail.com> +freeciv-2.4.4.ebuild:
   Version bump.
 
@@ -10,4 +15,3 @@
 
 	19 May 2014; Yarik <ygorbunov@gmail.com> +freeciv-2.3.5.ebuild,ChangeLog:
   New ebuild for freeciv - multiplayer strategy game (Civilization Clone).
-
