--- a/dev-util/cppcheck/ChangeLog
+++ b/dev-util/cppcheck/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*cppcheck-1.70 (08 Sep 2015)
+
+  08 Sep 2015; Yaroslav Gorbunov <ygorbunov@gmail.com> +cppcheck-1.70.ebuild,
+  +files/cppcheck-1.69-c++0x.patch, +files/cppcheck-1.69-tinyxml2.patch:
+  Version bump
+
 *cppcheck-1.68 (11 Jan 2015)
 
   11 Jan 2015;  <y@gentoo.org> +cppcheck-1.68.ebuild,
