--- a/games-action/supertuxkart/ChangeLog
+++ b/games-action/supertuxkart/ChangeLog
@@ -1,7 +1,10 @@
 # ChangeLog for games-action/supertuxkart
-# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+  04 Nov 2016; Yaroslav Gorbunov <ygorbunov@gmail.com>
+  -files/supertuxkart-0.7.3.patch, -supertuxkart-0.7.3.ebuild, metadata.xml:
+  Remove obsolete version
 
   06 Dec 2011; Yarik <ygorbunov@gmail.com>
   Initial import
-
