--- a/games-action/supertuxkart/ChangeLog
+++ b/games-action/supertuxkart/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*supertuxkart-0.9.2 (05 Nov 2016)
+
+  05 Nov 2016; Yaroslav Gorbunov <ygorbunov@gmail.com>
+  +supertuxkart-0.9.2.ebuild, metadata.xml:
+  Version bump
+
   04 Nov 2016; Yaroslav Gorbunov <ygorbunov@gmail.com>
   -files/supertuxkart-0.7.3.patch, -supertuxkart-0.7.3.ebuild, metadata.xml:
   Remove obsolete version
