--- a/dev-util/google-perftools/ChangeLog
+++ b/dev-util/google-perftools/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-util/google-perftools
-# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2018 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*google-perftools-2.6.3 (02 Sep 2018)
+
+  02 Sep 2018; Yaroslav Gorbunov <ygorbunov@gmail.com>
+  +google-perftools-2.6.3.ebuild, -google-perftools-2.2.1.ebuild,
+  -google-perftools-2.3.ebuild, -google-perftools-2.4.ebuild, metadata.xml:
+  google-perftools-2.6.3
 
 *google-perftools-2.3 (11 Jan 2015)
 *google-perftools-2.4 (11 Jan 2015)
