--- a/dev-util/google-perftools/ChangeLog
+++ b/dev-util/google-perftools/ChangeLog
@@ -2,6 +2,12 @@
 # Copyright 1999-2018 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*google-perftools-2.6.90 (02 Sep 2018)
+
+  02 Sep 2018; Yaroslav Gorbunov <ygorbunov@gmail.com>
+  +google-perftools-2.6.90.ebuild:
+  google-perftools-2.6.90
+
 *google-perftools-2.6.3 (02 Sep 2018)
 
   02 Sep 2018; Yaroslav Gorbunov <ygorbunov@gmail.com>
